-map aligned,response view message fixed,question link to form fixed, removed blue text style,feedback query updated, img rounded overriden for map

--- a/css/dashboard-tiles-home.css
+++ b/css/dashboard-tiles-home.css
@@ -59,3 +59,7 @@
 .homepage-map {
     align-content: center;
 }
+
+.img-rounded {
+    border-radius: 5px;
+}
